--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "author": "GlaDOS",
     "contributors": [],
     "dependencies": {
-        "gulp": "^3.9.1"
+        "gulp": "^3.9.1",
+        "underscore": "^1.8.3"
     },
     "devDependencies": {
         "gulp-concat": "^2.6.1",
